--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -122,6 +122,7 @@
     "notif.issues.comment": "A new comment has been added to an issue related to you.",
     "notif.account.creation.attempt": "Registration request pending",
     "notif.ApiDepreciationWarning": "The API %s has been deprecated",
+    "notif.ApiBlockingWarning": "The API %s has been blocked",
     "api.access.request": "You will send an access request to the API %s. For which team do you want to send the request?",
     "FreeWithoutQuotas": "Free without quotas",
     "FreeWithQuotas": "Free with quotas",
@@ -1534,6 +1535,8 @@
     "api.home.create.plan.modal.description": "Create a new usage plan from scratch or import an existing usage plan from another API version. You can then customize it as needed.",
     "api.home.create.plan.modal.create.btn.label": "Create new usage plan",
     "api.home.create.plan.modal.import.btn.label": "Import a existing usage plan",
+    "api.lifecycle.blocking.confirm.modal.description.1": "Are you sure you want to block the API %s ?",
+    "api.lifecycle.blocking.confirm.modal.description.2": "There are %s subscriptions associated with this API.",
     "usage.plan.form.quotas.selector.true.label": "Configure quotas",
     "usage.plan.form.quotas.selector.true.description": "Set quotas to limit the number of calls.",
     "usage.plan.form.quotas.selector.false.label": "Unlimited",
