--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -122,6 +122,7 @@
   "notif.issues.comment": "Un nouveau commentaire a été ajouté à une issue vous concernant.",
   "notif.account.creation.attempt": "Demande d'inscription en attente",
   "notif.ApiDepreciationWarning": "L'API %s a été dépréciée",
+  "notif.ApiBlockingWarning": "L'API %s a été bloquée",
   "api.access.request": "Vous allez envoyer une demande d'accès à l'API %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
   "FreeWithoutQuotas": "Gratuit sans quotas",
   "FreeWithQuotas": "Gratuit avec quotas",
@@ -1534,6 +1535,8 @@
   "api.home.create.plan.modal.description": "Créez un plan d'utilisation à partir de zéro ou importez un plan d'utilisation existant à partir d'une autre version de l'API. Vous pourrez ensuite le personnaliser selon vos besoins.",
   "api.home.create.plan.modal.create.btn.label": "Créer un nouveau plan de souscription",
   "api.home.create.plan.modal.import.btn.label": "Importer un nouveau plan de souscription",
+  "api.lifecycle.blocking.confirm.modal.description.1": "Etes vous certain de vouloir bloquer l'API %s ?",
+  "api.lifecycle.blocking.confirm.modal.description.2": "Il y a %s souscriptions associées avec cette API.",
   "usage.plan.form.quotas.selector.true.label": "Configurer les quotas",
   "usage.plan.form.quotas.selector.true.description": "Configurez des quotas pour limiter le nombre d'appels.",
   "usage.plan.form.quotas.selector.false.label": "Illimité",
@@ -1630,6 +1633,7 @@
   "notifications.page.filters.type.CheckoutForSubscription.label": "Paiement pour souscription",
   "notifications.page.filters.type.AccountCreationAttempt.label": "Demande de création de compte",
   "notifications.page.filters.type.ApiDepreciationWarning.label": "API dépréciée",
+  "notifications.page.filters.type.ApiBlockingWarning.label": "API bloquée",
   "notifications.page.filters.all.notifications.label": "Toutes",
   "notifications.page.filters.unread.notifications.label": "À traiter",
   "notifications.page.filters.clear.label": "Réinitialiser les filtres",
