--- a/manual/docs/03-guides/14-authentication.mdx
+++ b/manual/docs/03-guides/14-authentication.mdx
@@ -261,6 +261,48 @@ Authentication in daikoku can be tricky. It's a tenant configuration, we are her
         - HTTP Headers: the HTTP headers passed
         - Key type: type of the key searched in the jwks
 
+    ## Role-based access control
+
+    You can restrict access to Daikoku based on the user's roles provided by the OAuth2/OIDC provider. Three optional fields are available for this:
+
+    - `Role claim name`: the name of the claim in the ID token that contains the user's roles (e.g. `role`, `roles`, `groups`).
+    - `Admin role`: the role value that grants Daikoku administrator access (e.g. `daikoku-admin`). Users with this role will be Daikoku admins.
+    - `User role` *(optional)*: the role value that grants standard user access (e.g. `daikoku-user`).
+
+    If `Role claim name` and `Admin role` are configured, Daikoku will look at the user's roles from the ID token to determine whether the user is an admin or a regular user.
+
+    If `User role` is also set, users who have neither the admin role nor the user role will be **rejected** at login with a clear error message. If `User role` is left empty, any authenticated user without the admin role will be allowed as a standard user (same behavior as before).
+
+    :::tip
+    This is useful when your OAuth2 provider manages roles (e.g. via groups or scopes) and you want to restrict which users can access Daikoku.
+    :::
+
+    ## Logout URL
+
+    The `Logout URL` field configures where the user is redirected after logging out, in order to also terminate the session on the OAuth2/OIDC provider side.
+
+    You can use the following placeholders in the URL:
+    - `${redirect}` — replaced by the Daikoku root URL (post-logout redirect)
+    - `${clientId}` — replaced by the OAuth2 client ID
+    - `${idTokenHint}` — replaced by the user's ID token (required by some providers like Duende IdentityServer)
+
+    **Example for Auth0:**
+    ```
+    https://<auth0-tenant>/oidc/logout?redirectTo=${redirect}&client_id=${clientId}
+    ```
+
+    **Example for a standard OIDC provider (Keycloak, Duende, etc.):**
+    ```
+    https://<provider>/connect/endsession?id_token_hint=${idTokenHint}&post_logout_redirect_uri=${redirect}&client_id=${clientId}
+    ```
+
+    :::info OIDC Discovery
+    When using the OIDC Discovery feature (by providing a well-known configuration URL), the logout URL is **automatically built** from the `end_session_endpoint` advertised by the provider. The placeholders `${idTokenHint}`, `${redirect}` and `${clientId}` are appended automatically if the discovered URL does not already contain them.
+    :::
+
+    :::note Since v18.7.0
+    The `Logout URL` field is now optional. If left empty (e.g. when the provider does not expose an `end_session_endpoint`, like some PingFederate configurations), Daikoku will simply clear the local session and redirect the user to the home page without calling the provider's logout endpoint.
+    :::
 
       ## Testing your configuration
 
