FIX doc building

--- a/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
@@ -497,7 +497,7 @@ This document provides a comprehensive overview of all Daikoku email events, the
     <p>
       <strong>
         This email is sent to the user so they can finalize their account creation and validate their email address.
-        Please note that a step form containing ${form.email} is required to send this email to the user.
+        Please note that a step form containing {'${form.email}'} is required to send this email to the user.
       </strong>
     </p>
 
