Wip OAuth2 claims to User

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -318,6 +318,7 @@
     "Use JSON payloads": "Use JSON payloads",
     "Read profile from JWT token": "Read profile from JWT token",
     "Token scope": "Token scope",
+    "selectedMetadata": "Selected metadata",
     "Client Id": "Client Id",
     "Client secret": "Client secret",
     "Authorize URL": "Authorize URL",
